# grain-project

./: README.md  allocator.py  allocator_repeat.py  check_distribution.ipynb  frontend.py  main.py  pyproject.toml  requirements.txt
allocator/: __init__.py  config.py  main.py  utils.py
allocator/ai/: __init__.py  openai_client.py  prompt_builder.py  token_tracker.py
allocator/allocation/: __init__.py  allocator.py  validator.py
allocator/analysis/: __init__.py  analyzer.py
allocator/io/: __init__.py  loader.py  saver.py
allocator/models/: __init__.py  driver.py  order.py
archive/: allocator.py  allocator_deterministic.py  allocator_repeat.py  check_distribution.ipynb
diagram/: backend-class.txt  backend-flowchart.txt  backend.drawio
frontend/: app.py
