[project]
name = "grain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "folium>=0.20.0",
    "ipykernel>=7.0.1",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pulp>=3.3.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.25.3",
    "uvicorn>=0.38.0",
]
